<resources>
    <string name="app_name">Tugo</string>
    <string name="networkError">Oh! You are not connected to a wifi or cellular data network. Please connect and try again</string>
    <string name="networkErrorCode">NO_INTERNET_CONNECTION</string>
    <string name="unknownError">Something went wrong!</string>
    <string name="requestTimeOutError">Oooops! We couldn’t capture your request in time. Please try again.</string>
    <string name="errorCodeMalformedJson">MALFORMED_JSON</string>
    <string name="responseMalformedJson">Oops! We hit an error. Try again later.</string>
    <string name="title_splash">Splash</string>
    <string name="txt_loading">Loading</string>
    <string name="title_home">Home</string>
    <string name="title_orders">Orders</string>
    <string name="title_profile">Profile</string>
    <string name="hint_email_address">EMAIL ADDRESS</string>
    <string name="hint_pswd">PASSWORD</string>
    <string name="txt_forgot_pswd">Forgot Password?</string>
    <string name="txt_login">Sign In</string>
    <string name="txt_dont_have_acnt">Don\'t have account?</string>
    <string name="txt_create_new_account">Create new account.</string>
    <string name="title_wt1">Everyday meals in a click</string>
    <string name="subtitle_wt1">Browse once, have meals on time with a designed package!</string>
    <string name="title_wt2">Widerange of providers</string>
    <string name="subtitle_wt2">A healthy and affordable delivery always at your front door on time</string>
    <string name="title_wt3">The right meal plan for you</string>
    <string name="subtitle_wt3">Fresh, diverse and delicious, find your own plan now.</string>
    <string name="btn_next">Next</string>
    <string name="btn_get_started">Get Started</string>
    <string name="txt_or">OR</string>
    <string name="txt_connect_with_fb">SignIn with facebook</string>
    <string name="txt_connect_with_google">SignIn with google</string>
    <string name="txt_signup">Sign Up</string>
    <string name="txt_tc_header">By Signing up you agree to our</string>
    <string name="txt_tc">Terms Conditions</string>
    <string name="txt_pp">Privacy Policy.</string>
    <string name="hint_full_name">FULL NAME</string>
    <string name="hint_confirm_pswd">CONFIRM PASSWORD</string>
    <string name="txt_create_account">Create account</string>
    <string name="txt_signin">Sign in</string>
    <string name="txt_signin_header_message">Please sign in to continue.</string>
    <string name="txt_verify_phone_number">Verify phone number</string>
    <string name="txt_verify_otp_header_message">Enter the 6-Digit code sent to you at %s</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_didnt_receive_code">Didn\'t receive code?</string>
    <string name="txt_resend_again">Resend Again.</string>
    <string name="txt_get_started_with_tugo">Get started with Tugo</string>
    <string name="txt_add_phone_header_message">Enter your phone number to use tugo and enjoy your food :)</string>
    <string name="hint_phone_number">PHONE NUMBER</string>
    <string name="txt_skip">Skip</string>
    <string name="title_create_an_acnt">Create an account</string>
    <string name="txt_header_empty_orders">You don\'t have any plan yet</string>
    <string name="txt_msg_empty_orders">Good foods are waving \n Explore some plans tailored for you</string>
    <string name="txtExploreFood">Explore Food</string>
    <string name="title_order_detail">Plan Details</string>
    <string name="header_profile">Update your settings like notifications, payments, profile edit etc.</string>
    <string name="txt_personal_info">Personal Information</string>
    <string name="txt_subtitle_personal_info">Change your account information</string>
    <string name="txt_change_pswd">Change Password</string>
    <string name="txt_subtitle_change_pswd">Change your password</string>
    <string name="txt_payment_methods">Payment Methods</string>
    <string name="txt_subtitle_payment_methods"><![CDATA[Add your credit & debit cards]]></string>
    <string name="txt_delivery_address">Delivery Address</string>
    <string name="txt_subtitle_delivery_address">Add or remove your delivery locations</string>
    <string name="txt_notification">Notification</string>
    <string name="txt_push_noti">Push Notifications</string>
    <string name="txt_subtitle_push_noti">For daily update you will get it</string>
    <string name="txt_sms_noti">SMS Notifications</string>
    <string name="txt_promo_noti">Promotional Notifications</string>
    <string name="txt_logout">Logout</string>
    <string name="title_account_settings">Account Setting</string>
    <string name="hint_new_pswd">NEW PASSWORD</string>
    <string name="txt_update">Update</string>
    <string name="title_payment_methods">Payment Methods</string>
    <string name="title_delivery_address">Delivery Address</string>
    <string name="txt_add_a_new_address">Add a new address</string>
    <string name="title_edit_address">Edit address</string>
    <string name="txt_saved_address">Saved Address</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_saved_cards">Saved Cards</string>
    <string name="txt_add_a_new_card">Add a new card</string>
    <string name="txt_add_card_detail">This card will only be charged when you place an order.</string>
    <string name="hint_card_num">4343 4343 4343 4343</string>
    <string name="hint_card_expiry">MM/YY</string>
    <string name="hint_card_cvc">CVC</string>
    <string name="txt_set_as_default">Set as default</string>
    <string name="txt_add_card">Add Card</string>
    <string name="hint_address">Enter full delivery address \n\nExample: Apartment 1405,
        Burj Al Arab Tower, The villa community, Dubailand, Dubai</string>
    <string name="txt_add_address">Enter the address into the form below</string>
    <string name="txt_edit_address_header">Edit the address into the form below</string>
    <string name="txt_btn_add_address">Add address</string>
    <string name="txt_btn_redeem_plan">Redeem this plan</string>
    <string name="txt_btn_write_comment">Write a comment</string>
    <string name="txt_order_summary">Order Summary</string>
    <string name="txt_total_paid">Total Paid</string>
    <string name="txt_payment">Payment</string>
    <string name="txt_pause">Pause</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_message_us">Message Us</string>
    <string name="txt_reorder_this_plan">Reorder this plan</string>
    <string name="txt_write_comment">Write a comment</string>
    <string name="txt_header_home">Find the right meal preps for you</string>
    <string name="hint_searchview_home">looking for a specific provider?</string>
    <string name="txt_browse_by_diet">Browse by diet</string>
    <string name="txt_browse_all_providers">Browse all providers</string>
    <string name="txt_lets_find_you_meal_plan">Lets find you a meal plan</string>
    <string name="txt_view_all">View All</string>
    <string name="txt_discover_all">Discover All</string>
    <string name="txt_meal_providers">Meal Providers</string>
    <string name="txt_starting_from">Starting from</string>
    <string name="txt_customize_your_result">Customize your results</string>
    <string name="txt_meal_plan_price">Meal plan price</string>
    <string name="txt_delivers_to">Delivers to</string>
    <string name="txt_minimum_meals_available">Minimum Meals Available</string>
    <string name="txt_trial_meal">Trial Meals</string>
    <string name="txt_available">Available</string>
    <string name="txt_delivers_on">Delivers on</string>
    <string name="txt_select_meal_per_day">Select meal / day</string>
    <string name="txt_minus">-</string>
    <string name="txt_select_day_for_plan">Select week(s) / plan</string>
    <string name="txt_trial_meal_available">Trial Meal Available</string>
    <string name="txt_try_now">Try now</string>
    <string name="txt_your_plan">Your Plan</string>
    <string name="txt_select_plan">Select Plan</string>
    <string name="txt_delivery_location">Delivery Location</string>
    <string name="txt_delivery_time">Delivery Time</string>
    <string name="txt_available_timing">Available Timings</string>
    <string name="txt_instructions_or_allergies">Instructions/allergies</string>
    <string name="hint_add_instructions">Enter any instructions you wish to inform the provider</string>
    <string name="txt_customize">Select Plan</string>
    <string name="title_delivery">Delivery</string>
    <string name="txt_location">Location</string>
    <string name="txt_instructions">Instructions</string>
    <string name="txt_total_amount_to_pay">Total amount to pay</string>
    <string name="txt_choose_payment_method">Choose Payment Method</string>
    <string name="txt_payment_method">Payment Method</string>
    <string name="txt_payment_method_subtitle">Select your preferred card</string>
    <string name="txt_add_a_new_payment_method">Add a new payment method</string>
    <string name="txt_proceed_to_pay">Proceed to payment</string>
    <string name="txt_thank_you">Thank You</string>
    <string name="txt_your_trans_success">Your transaction was successful</string>
    <string name="txt_back_to_home">Back to home</string>
    <string name="txt_view_plan"><u>View Plan</u></string>
    <string name="txt_date">Date</string>
    <string name="txt_paid_with">Paid with</string>
    <string name="txt_ongoing">Ongoing</string>
    <string name="txt_history">History</string>
    <string name="txt_trial_meal_subtitle">This pack includes a 1-week portion of your exploration</string>
    <string name="txt_have_some_questions">Have some questions?</string>
    <string name="txt_let_us_know">Let us know!</string>
    <string name="txt_no_trial_meal_title">No Trial Meals Available</string>
    <string name="txt_no_trial_meal_subtitle">This provider currently has no trial plans available</string>
    <string name="txt_info">Info</string>
    <string name="txt_nutrition_info">Nutrition Info</string>
    <string name="txt_readall">Read all ></string>
    <string name="err_fill_detail">Please fill the details</string>
    <string name="title_warning">Warning</string>
    <string name="txt_confirm_logout">Are you sure you want to logout?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="txt_err_phone_number">Please enter a valid phone number</string>
    <string name="txt_err_valid_otp">Please enter valid code</string>
    <string name="txt_forgot_pswd_header">Forgot Password</string>
    <string name="txt_forgot_pswd_header_message">Please enter email address you\'ve used to register with us and we\'ll send you a reset link !</string>
    <string name="txt_reset">Reset</string>
    <string name="txt_err_valid_email">Please enter valid email address</string>
    <string name="txt_reset_link_sent">Password reset ink sent to your email address, Please check you mail</string>
    <string name="txt_reset_link_sent_fail">Failed to sent link.</string>
    <string name="txt_err_no_pref_value">Required information not found</string>
    <string name="txt_err_firebase_sms_excceed">Daily SMS limit exceed</string>
    <string name="txt_add">Add</string>
    <string name="txt_whats_your_rate">What\'s your rate?</string>
    <string name="txt_write_comment_header">What do you think about this plan?</string>
    <string name="txt_type_your_comment">Type your comment here</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_your_comment_submitted">Your comment has been submitted</string>
    <string name="txt_about_your_delivery">About your delivery</string>
    <string name="txt_about_your_delivery_detail">Your delivery will be assigned to the next available delivery date from the date of your selection</string>
    <string name="txt_got_it">Got it</string>
    <string name="txt_dont_show_again">Don\'t show again</string>
</resources>