<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColor"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llOrdersEmpty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@color/bgColor"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cart"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/HeaderEmptyView"
                android:text="@string/txt_header_empty_orders"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/HeaderEmptyView"
                android:textSize="@dimen/size_12"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/txt_msg_empty_orders"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StyleButtonNext"
                android:layout_margin="@dimen/margin_20"
                android:text="@string/txtExploreFood"/>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>